Fixed links cutting off on mobile

--- a/css/index.css
+++ b/css/index.css
@@ -30,7 +30,7 @@ html, button, input, select, textarea,
 
 #linksSection {
     text-align: left;
-    font-size: 1em;
+    font-size: 0.9em;
     margin: 1em;
     white-space: nowrap;
 }
@@ -46,7 +46,7 @@ h1 {
     margin: 16px;
     margin-bottom: 0;
     padding: 0em;
-    font-size: 4em;
+    font-size: 3.75em;
     font-weight: 700;
 }
 
